- switching all top margins to bottom to avoid collapse/overlap bug  - layout tweaks for My Classmates and Course Archive views  - layout for forum posts

--- a/Didache.Web/css/layout.css
+++ b/Didache.Web/css/layout.css
@@ -81,9 +81,10 @@ a {
     font-size: 12px;
     line-height: 12px;
     padding: 2px 0 2px 24px;
-    margin-top: -10px;
+    margin-top: 10px;
     margin-bottom: 10px;
     display: block;
+    clear: both;
 }
 
 /* main columns */
@@ -94,10 +95,14 @@ a {
 #main-menu {
 	width: 180px;
 	float: left;
+	padding: 20px 0;
 }
 #main-content {
 	width: 800px;
 	float: right;
+}
+.main-column, #main-column {
+	padding: 20px;
 }
 
 /* 
@@ -113,7 +118,6 @@ a {
 	background: url(/css/images/page-wide-bg.png) 0 85px repeat-y;
 }
 .page-wide .main-column {
-	padding: 20px;
 	float: left;
 	width: 580px;
 	min-height: 600px;
@@ -185,7 +189,7 @@ a {
 /* main left menu */
 
 #profile-large {
-	margin: 20px 0 0 0;
+	margin: 0 0 20px;
 }
 
 #profile-large img {
@@ -193,7 +197,7 @@ a {
 }
 
 #user-profile {
-	margin: 20px 0 30px 0 ;
+	margin: 0 0 30px;
 }
 #user-profile a {
 	display: block;	
@@ -228,7 +232,7 @@ a {
 }
 
 .side-menu {
-	margin: 20px 0 0 0;
+	margin: 0 0 20px;
 }
 .side-menu h3 {
 	font-weight: normal;
